--- a/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
+++ b/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
@@ -23,12 +23,14 @@ data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS(params$path_to_data_1L_chr
 bl_tb <- data_tb %>% 
    dplyr::filter(round=="Baseline") %>% 
    dplyr::select(aqol6d_total_w, PHQ9, BADS, GAD7, OASIS, SCARED, K6) %>% 
-  dplyr::mutate(aqol6d_total_w = ifelse(aqol6d_total_w == 1, 0.999, aqol6d_total_w)) %>% 
-  dplyr::mutate(aqol6d_total_w_log = log(aqol6d_total_w),
-         aqol6d_total_w_logit = psych::logit(aqol6d_total_w),
-         aqol6d_total_w_loglog = -log(-log(aqol6d_total_w)),
-         aqol6d_total_w_cloglog = log(-log(1-aqol6d_total_w))) %>% 
-  dplyr::filter(!is.na(PHQ9)) 
+  dplyr::mutate(aqol6d_total_w = ifelse(aqol6d_total_w == 1, 0.999, aqol6d_total_w)) 
+
+# %>% 
+#   dplyr::mutate(aqol6d_total_w_log = log(aqol6d_total_w),
+#          aqol6d_total_w_logit = psych::logit(aqol6d_total_w),
+#          aqol6d_total_w_loglog = -log(-log(aqol6d_total_w)),
+#          aqol6d_total_w_cloglog = log(-log(1-aqol6d_total_w))) %>% 
+#   dplyr::filter(!is.na(PHQ9)) 
 #folds_10 <- createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
 ```
 
@@ -55,6 +57,8 @@ make_one_predr_mdl <- function(data_tb,
                                mdl_type_1L_chr = "OLS_NTF",
                                mdl_types_lup = NULL,
                                control_1L_chr = NA_character_){
+  data_tb <- data_tb %>%
+    dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr))) 
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
     start_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup,
@@ -134,6 +138,8 @@ make_smry_of_one_predr_mdl <- function(data_tb,
                                        pred_type_1L_chr = NULL){
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+    data_tb <- data_tb %>%
+        dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr))) 
     mdl_desc_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup,
                                                    match_var_nm_1L_chr = "short_name_chr",
                                                    match_value_xx = mdl_type_1L_chr,
@@ -179,6 +185,9 @@ plot_lnr_cmprsn <- function(data_tb,
                       predr_var_nm_1L_chr,
                       dep_var_desc_1L_chr = "AQoL-6D utility score",
                       predr_var_desc_1L_chr){
+      data_tb <- data_tb %>%
+        dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr)))
+      
   ggplot2::ggplot(data_tb,ggplot2::aes(x = !!rlang::sym(predr_var_nm_1L_chr), y = !!rlang::sym(dep_var_nm_1L_chr) )) +
   ggplot2::geom_point() + 
   ggplot2::geom_smooth(method = "loess", size = 1.5) +
@@ -238,6 +247,8 @@ write_one_predr_mdl_plts <- function(data_tb,
                                      tfmn_for_bnml_1L_lgl = F,
                                      family_1L_chr = NA_character_,
                                      plt_idcs_int = 1:5){
+      data_tb <- data_tb %>%
+        dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr)))
   tfd_data_tb <- transform_data_tb_for_cmprsn(data_tb, 
                                               mdl = mdl, 
                                               pred_type_1L_chr = pred_type_1L_chr,
@@ -292,6 +303,8 @@ write_one_predr_mdl_outp <- function(data_tb,
                                      plt_idcs_int = NA_integer_){
   if(is.null(mdl_types_lup))
     mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+  data_tb <- data_tb %>%
+        dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr)))
   arg_vals_chr <- c("control_chr","family_chr","pred_type_chr") %>%
     purrr::map_chr(~ready4fun::get_from_lup_obj(mdl_types_lup,
                                                    match_var_nm_1L_chr = "short_name_chr",
@@ -396,6 +409,8 @@ write_sngl_predr_mdls_outps <- function(data_tb,
                                         mdl_types_lup = NULL){
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+    data_tb <- data_tb %>%
+        dplyr::filter(!is.na(!!rlang::sym(predr_var_nm_1L_chr)))
   smry_of_sngl_predr_mdls_tb <- purrr::map_dfr(mdl_types_chr,
                ~ {
                  tfmn_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup, 
@@ -419,7 +434,8 @@ write_sngl_predr_mdls_outps <- function(data_tb,
                                                    .x,
                                                    "_MDL"
                                                    ))
-               })
+               }) %>%
+    dplyr::arrange(dplyr::desc(RsquaredP))
   return(smry_of_sngl_predr_mdls_tb)
   
                                         }
@@ -487,17 +503,16 @@ main_predrs_chr <- c("BADS","GAD7","K6","OASIS","PHQ9","SCARED")
 # predr_vals_dbl <- 0:27
 ```
 
-
 ```{r}
-write_sngl_predr_mdls_outps(data_tb = bl_tb,
-                            folds_ls = folds_ls,
-                            mdl_types_chr = c("OLS_NTF","OLS_LOG", "OLS_LOGIT", "OLS_LOGLOG", "OLS_CLL", "GLM_GSN_LOG", "GLM_BNL_LOG", "GLM_BNL_LGT", "GLM_BNL_CLL", "BET_LOG","BET_LGT", "BET_CLL"),
-                   dep_var_nm_1L_chr = "aqol6d_total_w",
-                   predr_var_nm_1L_chr = "PHQ9",
-                   predr_var_desc_1L_chr = "PHQ9 total score",
-                   predr_vals_dbl = 0:27, 
-                   path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                   mdl_types_lup = mdl_types_lup)
+smry_of_sngl_predr_mdls_tb <- write_sngl_predr_mdls_outps(data_tb = bl_tb,
+                                                          folds_ls = folds_ls,
+                                                          mdl_types_chr = c("OLS_NTF","OLS_LOG", "OLS_LOGIT", "OLS_LOGLOG", "OLS_CLL", "GLM_GSN_LOG", "GLM_BNL_LOG", "GLM_BNL_LGT", "GLM_BNL_CLL", "BET_LOG","BET_LGT", "BET_CLL"),
+                                                          dep_var_nm_1L_chr = "aqol6d_total_w",
+                                                          predr_var_nm_1L_chr = "PHQ9",
+                                                          predr_var_desc_1L_chr = "PHQ9 total score",
+                                                          predr_vals_dbl = 0:27, 
+                                                          path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                                                          mdl_types_lup = mdl_types_lup)
 ```
 # Regression Testing
 ## Linear model (no transformation)
@@ -525,22 +540,21 @@ predr_cmprsns_tb <- write_predr_cmprsn_outps(data_tb = bl_tb,
 
 ```
 
-## Individual predictor
+## Individual predictors
 ```{r}
 write_mdl_sngl_predrs_outps <- function(data_tb,
                                        folds_ls,
                                        predr_var_nm_chr,
-                                       predr_var_desc_chr,
-                                       predr_vals_ls,
+                                       # predr_var_desc_chr,
+                                       # predr_vals_ls,
                                        mdl_type_1L_chr,
                                        dep_var_nm_1L_chr = "aqol6d_total_w",
                                        path_to_write_to_1L_chr,
-                                       mdl_types_lup = NULL){
+                                       mdl_types_lup = NULL,
+                                       fl_nm_pfx_1L_chr = "ind_predr"){
     if(is.null(mdl_types_lup))
       mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
-  smry_of_mdl_sngl_predrs_tb <- purrr::pmap_dfr(list(mdl_types_chr = mdl_types_chr,
-                                                     predr_var_desc_chr = predr_var_desc_chr,
-                                                     predr_vals_ls = predr_vals_ls),
+  smry_of_mdl_sngl_predrs_tb <- purrr::map_dfr(predr_var_nm_chr,
                ~ {
                  tfmn_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup, 
                                              match_var_nm_1L_chr = "short_name_chr",
@@ -551,63 +565,34 @@ write_mdl_sngl_predrs_outps <- function(data_tb,
                                           folds_ls = folds_ls,
                                           dep_var_nm_1L_chr  = dep_var_nm_1L_chr , 
                                           tfmn_1L_chr = tfmn_1L_chr,
-                                          predr_var_nm_1L_chr = ..1, 
-                                          predr_var_desc_1L_chr = ..2,
-                                          predr_vals_dbl = ..3,
+                                          predr_var_nm_1L_chr = .x, 
+                                          predr_var_desc_1L_chr = NA_character_,
+                                          predr_vals_dbl = NA_real_,
                                           mdl_type_1L_chr = mdl_type_1L_chr,
                                           path_to_write_to_1L_chr = path_to_write_to_1L_chr,
                                           mdl_types_lup = mdl_types_lup,
-                                          mdl_fl_nm_1L_chr = paste0("RT_",
-                                                   predr_var_nm_1L_chr,
-                                                   "_",
+                                          mdl_fl_nm_1L_chr = paste0(fl_nm_pfx_1L_chr,
+                                                                    "_",
                                                    .x,
                                                    "_MDL"
-                                                   ))
+                                                   ),
+                                          plt_idcs_int = c(3,5)) %>%
+                   dplyr::select((-Model)) %>%
+                   dplyr::mutate(Predictor = .x) %>%
+                   dplyr::select(Predictor, dplyr::everything())
                })
   return(smry_of_mdl_sngl_predrs_tb)
   
                                         }
 ```
-
 ```{r}
-predictors <- c("PHQ9", "BADS", "GAD7","OASIS","SCARED","K6" )
-
-summary_table<-data.frame("Model"=NA,"Rsquare"=NA,"RMSE"=NA, "MAE"=NA, "Rsquare.prediction"=NA, "RMSE prediction"=NA,"MAE prediction"=NA)
-
-n=1 
-for(predictor in predictors){  
-  Rsquared<-NA 
-  RMSE<-NA 
-  MAE<-NA 
-  RsquaredP<-NA 
-  RMSEP<-NA 
-  MAEP<-NA 
-  for (i in 1:10) {
-    fit = glm(as.formula(paste0("aqol6d_total_w~", predictor )), data = baseline[-folds_10[[i]],], family=gaussian(log)) 
-    pred<-predict(fit,type="response")
-    Rsquared[i]=R2(pred, baseline[-folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-    RMSE[i]=RMSE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-    MAE[i]=MAE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-    pred<-predict(fit,newdata=baseline[folds_10[[i]],],type="response")
-    RsquaredP[i]=R2(pred, baseline[folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-    RMSEP[i]=RMSE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-    MAEP[i]=MAE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-} 
-
-
-#save model fit
-summary_table[n,1]=predictor 
-summary_table$Rsquare[n]= mean(Rsquared)
-summary_table$RMSE[n]= mean(RMSE)
-summary_table$MAE[n]=mean(MAE)
-summary_table$`Rsquare.prediction`[n]=mean(RsquaredP)
-summary_table$`RMSE.prediction`[n]=mean(RMSEP)
-summary_table$`MAE.prediction`[n]=mean(MAEP)
-n=n+1
-}
-
-knitr::kable( summary_table  , format="html",digits = 3) %>%
-    kable_styling(bootstrap_options = "striped", full_width = F) 
+smry_of_mdl_sngl_predrs_tb <- write_mdl_sngl_predrs_outps(data_tb = bl_tb,
+                            folds_ls = folds_ls,
+                            predr_var_nm_chr = predr_cmprsns_tb$predr_chr,
+                            mdl_type_1L_chr = "GLM_GSN_LOG",
+                            dep_var_nm_1L_chr = "aqol6d_total_w",
+                            path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                            mdl_types_lup = mdl_types_lup)
 ```
 
 ## Additional confounding variables
@@ -633,8 +618,6 @@ for(i in predictor){
                      AIC=AIC(model), BIC=BIC(model),
                      "Significant"=paste(names(which(summary(model)$coefficients[,4]<0.01)),collapse = " "))) 
 } 
-
-
 
 knitr::kable( summarytable  , format="html",digits = 3) %>%
     kable_styling(bootstrap_options = "striped", full_width = F) 
